src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PreEWBPhoneAppointmentTime__c</fullName>
        <label>Pre-EWB Phone Appointment Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreReqsHaveBeenReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Reqs Have Been Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredName__c</fullName>
        <formula>StudentAttributes__r.Nickname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrerequisitesStatus__c</fullName>
        <description>Indicates if prerequisites have been met</description>
        <inlineHelpText>Have all of the prerequisites been met?</inlineHelpText>
        <label>Prerequisite(s) Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Not Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriorCollegeExperience__c</fullName>
        <label>Prior College Experience</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriorCollegeNotes__c</fullName>
        <label>Prior College Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriorExperienceWithOnlineLearning__c</fullName>
        <label>Prior Experience with Online Learning?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcessCount__c</fullName>
        <label>Process Count</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProficiencyComputer__c</fullName>
        <inlineHelpText>How proficient is the student on a computer?</inlineHelpText>
        <label>Proficiency on a Computer</label>
        <picklist>
            <picklistValues>
                <fullName>Novice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgGuideCompleteTimePreReqs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review admission requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramCollege__c</fullName>
        <formula>CASE(TEXT(MarketingProgram__r.ProgramGroups__c),
&apos;Business&apos;, &apos;Business&apos;,
&apos;Information Technology&apos;, &apos;IT&apos;,
&apos;Education (initial teaching licensure programs)&apos;, &apos;Teachers - Licensure&apos;,
&apos;Education (programs for current teachers and others)&apos;, &apos;Teachers&apos;,
&apos;Nursing&apos;, &apos;Health Professions&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Fit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramGroup__c</fullName>
        <formula>TEXT(MarketingProgram__r.ProgramGroups__c)</formula>
        <label>Program Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProspectId__c</fullName>
        <description>Field to hold the prospects id once the student id is assigned to the student, this field will allow searching by the student id on the care profile.</description>
        <label>Prospect Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProspectsState__c</fullName>
        <formula>StudentContact__r.MailingState</formula>
        <label>Prospects State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNValidationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting RN Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadinessAssessmentCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Evaluates to complete when all of the fields are populated.</description>
        <label>Readiness Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadinessTest__c</fullName>
        <label>Readiness Test</label>
        <summaryFilterItems>
            <field>ReadinessAssessment__c.Results__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>ReadinessAssessment__c.CAREProfile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReadyforEvaluationDate__c</fullName>
        <description>The Date/Time that all transcripts are received and indexed. and the record is ready for an evaluation.</description>
        <label>Ready for Evaluation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RealProcessCount__c</fullName>
        <formula>CASE(ProcessCount__c,
&quot;1&quot;, 1, 
&quot;2&quot;, 2,
&quot;3&quot;, 3, 
&quot;4&quot;, 4, 
&quot;5&quot;, 5,
&quot;6&quot;, 6,
&quot;7&quot;, 7,
&quot;8&quot;, 8,
&quot;9&quot;, 9,
&quot;10&quot;, 10,
0)+ PCtest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real Process Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <formula>IMAGE(
CASE( DispositionValue__c, 
0, &quot;servlet/servlet.FileDownload?file=015300000022BCs&quot;, 
1,  &quot;servlet/servlet.FileDownload?file=015300000022BCt&quot;,
2,  &quot;servlet/servlet.FileDownload?file=015300000022BCu&quot;,
3,  &quot;servlet/servlet.FileDownload?file=015300000022BCv&quot;, 
4,  &quot;servlet/servlet.FileDownload?file=015300000022BCw&quot;,
5,  &quot;servlet/servlet.FileDownload?file=015300000022BCx&quot;,
6,  &quot;servlet/servlet.FileDownload?file=015300000022BCy&quot;,
7,  &quot;servlet/servlet.FileDownload?file=015300000022BCq&quot;,
8,  &quot;servlet/servlet.FileDownload?file=015300000022BCm&quot;,
9,  &quot;servlet/servlet.FileDownload?file=015300000022BCn&quot;,
10,  &quot;servlet/servlet.FileDownload?file=015300000022BCo&quot;,
11,  &quot;servlet/servlet.FileDownload?file=015300000022BCk&quot;,
12,  &quot;servlet/servlet.FileDownload?file=015300000022BCp&quot;,
13,  &quot;servlet/servlet.FileDownload?file=015300000022BCl&quot;,
14,  &quot;servlet/servlet.FileDownload?file=015300000022BCj&quot;,
15,  &quot;servlet/servlet.FileDownload?file=015300000022BCr&quot;,
16,  &quot;servlet/servlet.FileDownload?file=015300000022BCi&quot;,
&quot;/s.jpg&quot;),
&quot;Record Status&quot;)</formula>
        <label>Record Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTag__c</fullName>
        <description>Used as an indicator of weather the lead is a LeadQual lead or Enrollment lead</description>
        <inlineHelpText>Indicates if the lead is worked by LeadQual or Enrollment.</inlineHelpText>
        <label>Record Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordsCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZMSk&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235vG&quot;, &quot;Create A Case&quot;) , &quot;Records Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Records Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferID__c</fullName>
        <description>The Refer ID that is brought it with the Application</description>
        <label>Refer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelevantWorkExperience__c</fullName>
        <label>Prior work experience</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;5 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelevantWorkNotes__c</fullName>
        <label>Relevant Work Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReliableInternet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Student has reliable Internet</inlineHelpText>
        <label>Reliable Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResetProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To reset the student after intake, take them off of the EWB roll and push back intended start date</description>
        <label>Reset Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScholarshipCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZKg2&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235vB&quot;, &quot;Create A Case&quot;) , &quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopAllContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opts the student out of all contact.</description>
        <label>Stop All Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StopEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opts the student out of emails.</description>
        <label>Stop Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StopPhoneCalls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opts the student out of phone calls</description>
        <label>Stop Dialer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentAttributes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Convenience lookup for Informatica to grab all information about a Paid Applicant in one shot instead of splitting into multiple jobs.</description>
        <label>Student Attributes</label>
        <referenceTo>StudentAttributes__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StudentContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CARE Profile</relationshipLabel>
        <relationshipName>CAREProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentDemeanor__c</fullName>
        <label>Student Demeanor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StudentEmploymentHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Employment History</label>
        <referenceTo>StudentEmploymentHistory__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>CAREProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentHandbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOEFL (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <formula>Account.StudentContact__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessOfOnlineCourses__c</fullName>
        <label>Success of Online Courses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEASIVScore__c</fullName>
        <label>TEAS IV Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL__c</fullName>
        <label>TOEFL</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnologyComments__c</fullName>
        <label>Technology Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TechnologyExpectations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technology Skills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThingsToDiscussNotes__c</fullName>
        <label>Fit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TimeBetweenAssessments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support structure/Roadblocks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeCommitment__c</fullName>
        <label>Hours per week</label>
        <picklist>
            <picklistValues>
                <fullName>1-5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;20 Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalTranscriptsReceivedOnBase__c</fullName>
        <label>Total Transcripts Received OnBase</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>equals</operation>
            <value>Received, Updated</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptReceivedDate__c</field>
            <operation>lessOrEqual</operation>
            <value>12/17/2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptReceivedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TranscriptCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZKg4&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235v6&quot;, &quot;Create A Case&quot;) , &quot;Transcript Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptDate__c</fullName>
        <label>Transcript Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TranscriptEvaluationTimeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranscriptEvaluationsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transcript Evaluations Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranscriptPreReqsSatisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transcript Pre-Reqs Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranscriptStatus__c</fullName>
        <description>Check for appealed and unreceived transcripts to give an overall status</description>
        <formula>IF( LegacyCARETransferEval__c = true, &quot;Transcripts Logged in Legacy CARE&quot; ,
IF( TranscriptsNeeded__c = 0, &quot;No Transcripts Needed&quot;,
IF( RNValidationRequired__c = true,&quot;RN Validation Required&quot;,
IF( Appealed_Transcript_Count__c &gt; 0, &quot;Waiting for Appeal&quot;,
IF( OutstandingTranscriptsOnBase__c &gt;0, &quot;Waiting for Documents&quot;,
IF( OR(BEGINS(TEXT(CareStatus__c),&apos;PROS&apos;), BEGINS(TEXT(CareStatus__c),&apos;PRAP&apos;), BEGINS(TEXT(CareStatus__c),&apos;APNN&apos;), BEGINS(TEXT(CareStatus__c),&apos;APIN&apos;), BEGINS(TEXT(CareStatus__c),&apos;APCO&apos;)), &quot;Waiting for Banner ID&quot;, 
IF( AND(OutstandingTranscripts__c &gt;0, OutstandingTransferEvaluations__c = 0, CompletedTransferEvaluations__c = 0), &quot;Pending Automated Index&quot;, &quot;All Transcripts Received&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The overall status of the transcript request process.  Valid values include Waiting for Transcripts, All Transcripts Received and Waiting for Appeal</inlineHelpText>
        <label>Transcript Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptTask_del__c</fullName>
        <label>Transcript Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptTrasferUnderstandingFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student understands that transcripts received before start date will be evaluated.</description>
        <inlineHelpText>Student understands that transcripts received before start date will be evaluated.</inlineHelpText>
        <label>Transcript Transfer Understanding Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranscriptsDeadline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranscriptsNeeded__c</fullName>
        <description>Number of Transcripts that are needed</description>
        <label>Transcripts Needed</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>notEqual</operation>
            <value>Not Expected</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TransferEvaluationStatus__c</fullName>
        <description>The over all status of a students transfer evaluations rolled up from the Transfer Evaluation Chid object</description>
        <formula>IF( LegacyCARETransferEval__c = true, &quot;Evaluation(s) Completed in Legacy CARE&quot; , 
IF( TranscriptsNeeded__c =0, &quot;No Evals Needed&quot;, 
IF( AND(CompletedTransferEvaluations__c &gt;0, OR(OutstandingTranscripts__c &gt;0, OutstandingTranscriptsOnBase__c &gt;0)), &quot;Evaluation(s) Completed with Manual Index&quot;, 
IF( RNValidationRequired__c = true,&quot;Waiting for RN Validation&quot;, 
IF( OutstandingTranscriptsOnBase__c &gt;0, &quot;Waiting for Documents&quot;, 
IF( OR(BEGINS(TEXT(CareStatus__c),&apos;PROS&apos;), BEGINS(TEXT(CareStatus__c),&apos;PRAP&apos;), BEGINS(TEXT(CareStatus__c),&apos;APNN&apos;), BEGINS(TEXT(CareStatus__c),&apos;APIN&apos;), BEGINS(TEXT(CareStatus__c),&apos;APCO&apos;)), &quot;Waiting for Banner ID&quot;, 
IF( BEGINS(TEXT(CareStatus__c),&apos;NAMT&apos;), &quot;Evaluation(s) Canceled&quot;, 
IF( AND(OutstandingTranscripts__c &gt;0, OutstandingTransferEvaluations__c = 0, CompletedTransferEvaluations__c = 0), &quot;Awaiting Indexing&quot; , 
IF(OutstandingTransferEvaluations__c &gt; 0, &quot;Evaluation in Progress&quot; , 
IF( AND(CompletedTransferEvaluations__c = 0, OutstandingTransferEvaluations__c =0, OutstandingTranscripts__c =0), &quot;Pending Evaluation(s)&quot;, &quot;Evaluation(s) Completed&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of a student&apos;s evaluation(s).  Valid values are &quot;Waiting for Transcripts&quot;, &quot;No Evals Needed&quot;, &quot;Pending Evaluations&quot;, Evaluations(s), Complete</inlineHelpText>
        <label>Transfer Evaluation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TuitionAndFees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuition / flat rate / applicable fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnderstandTimeToCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time to completion/ Opp&apos;ty to accelerate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdatedEvaluationRequestedDate__c</fullName>
        <description>For use when a new Transfer Evaluation has been requested</description>
        <inlineHelpText>For use when a new Transfer Evaluation has been requested</inlineHelpText>
        <label>Updated Evaluation Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdatedEvaluationSentDate__c</fullName>
        <description>For use when a new Transfer Evaluation has been sent</description>
        <inlineHelpText>For use when a new Transfer Evaluation has been sent</inlineHelpText>
        <label>Updated Evaluation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WGUUsername__c</fullName>
        <description>Username that is assigned to the Lead/Applicant</description>
        <label>WGU Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatProgram__c</fullName>
        <label>App Payment Info</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatTranscripts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All transcripts: alternate names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatTypeOfCoursesCompleted__c</fullName>
        <inlineHelpText>Medium of prior college experience</inlineHelpText>
        <label>What Type of Courses Completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Web Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Campus Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhyTheChangeInNeeds__c</fullName>
        <label>Long-term goals and motivation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhyThisProgram__c</fullName>
        <label>Why this Program?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhyWGU__c</fullName>
        <label>Why WGU?</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to Accelerate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competency Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Friend</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>wguainfid__c</fullName>
        <externalId>true</externalId>
        <label>wguainfid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AEC_ADMT_Priority</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>RecordStatus__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ProspectsState__c</columns>
        <columns>CAREStatusListView__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>StopAllContact__c</columns>
        <columns>StopPhoneCalls__c</columns>
        <columns>StopEmails__c</columns>
        <columns>LeadGrade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StopAllContact__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>StopPhoneCalls__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GoodBadLead__c</field>
            <operation>equals</operation>
            <value>Good Lead</value>
        </filters>
        <filters>
            <field>CAREStatusListView__c</field>
            <operation>equals</operation>
            <value>ADMT,AAMT</value>
        </filters>
        <filters>
            <field>LastStatusDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:200</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>MarketingProgram__c</field>
            <operation>notContain</operation>
            <value>Nursing,prel</value>
        </filters>
        <filters>
            <field>LastStatusDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>1/1/2014</value>
        </filters>
        <label>AEC/ ADMT Priority</label>
        <sharedTo>
            <role>AssociateEnrollmentCounselor</role>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
</CustomObject>